[metadata]
name = cryptext
version = 0.1
author = Aurélien Carle
author_email = flemme de mettre ton addresse
description = Secure passwords in the terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aureliencarle/cryptext
project_urls =
    Bug Tracker = https://github.com/aureliencarle/cryptext/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
